apps/play/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snapcast-nodeport
  namespace: argocd
spec:
  type: NodePort
  selector:
    app: snapcast
  ports:
    # Snapcast main TCP/UDP
    - name: snapcast-tcp
      protocol: TCP
      port: 1704
      targetPort: 1704
      nodePort: 31704
    - name: snapcast-udp
      protocol: UDP
      port: 1705
      targetPort: 1705
      nodePort: 31705
    - name: snapcast-http
      protocol: TCP
      port: 1780
      targetPort: 1780
      nodePort: 31780
    - name: snapcast-https
      protocol: TCP
      port: 1788
      targetPort: 1788
      nodePort: 31788

    # AirPlay (Shairport-sync classic/1)
    - name: airplay-daap
      protocol: TCP
      port: 3689
      targetPort: 3689
      nodePort: 31689
    - name: airplay-rtsp
      protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 31500
    - name: airplay-mdns
      protocol: UDP
      port: 5353
      targetPort: 5353
      nodePort: 31353
    - name: airplay-rtp
      protocol: UDP
      port: 6000
      targetPort: 6000
      nodePort: 31600

    # Spotify Librespot
    - name: spotify-discovery
      protocol: TCP
      port: 57621
      targetPort: 57621
      nodePort: 31621
